@@ -1,211 +1,127 @@
 package ru.practicum.shareit.item.service;
 
 import lombok.RequiredArgsConstructor;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
-import ru.practicum.shareit.booking.BookingMapper;
-import ru.practicum.shareit.booking.dto.BookingDtoOut;
-import ru.practicum.shareit.booking.model.Booking;
-import ru.practicum.shareit.booking.model.BookingStatus;
-import ru.practicum.shareit.booking.repository.BookingRepository;
-import ru.practicum.shareit.exceptions.NotFoundException;
-import ru.practicum.shareit.exceptions.ValidationException;
-import ru.practicum.shareit.item.dto.CommentDto;
-import ru.practicum.shareit.item.dto.CommentDtoOut;
-import ru.practicum.shareit.item.dto.ItemDto;
-import ru.practicum.shareit.item.dto.ItemDtoOut;
-import ru.practicum.shareit.item.mapper.CommentMapper;
-import ru.practicum.shareit.item.mapper.ItemMapper;
-import ru.practicum.shareit.item.model.Comment;
-import ru.practicum.shareit.item.model.Item;
-import ru.practicum.shareit.item.repository.CommentRepository;
-import ru.practicum.shareit.item.repository.ItemRepository;
-import ru.practicum.shareit.user.User;
-import ru.practicum.shareit.user.UserDto;
-import ru.practicum.shareit.user.UserMapper;
+import lombok.extern.slf4j.Slf4j;
+import ru.practicum.shareit.exception.EmptyFieldException;
+import ru.practicum.shareit.exception.EntityNotFoundException;
+import ru.practicum.shareit.exception.IncorrectDataException;
+import ru.practicum.shareit.item.dto.item.ItemDto;
+import ru.practicum.shareit.item.dto.comment.CommentDto;
+import ru.practicum.shareit.item.dto.item.ItemMapper;
+import ru.practicum.shareit.item.model.item.Item;
+import ru.practicum.shareit.item.repository.inmemory.ItemRepository;
+import ru.practicum.shareit.user.dto.dto.UserDto;
 import ru.practicum.shareit.user.service.UserService;
 
-import java.time.LocalDateTime;
+import java.util.Collection;
 import java.util.Collections;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
 import java.util.stream.Collectors;
 
-import static java.util.stream.Collectors.groupingBy;
-import static java.util.stream.Collectors.toList;
 
-
-@Service
+@Slf4j
 @RequiredArgsConstructor
-@Transactional(readOnly = true)
 public class ItemServiceImpl implements ItemService {
-    private final ItemRepository itemRepository;
-    private final CommentRepository commentRepository;
-    private final BookingRepository bookingRepository;
+
     private final UserService userService;
+    private final ItemRepository itemRepository;
 
     @Override
-    @Transactional
-    public ItemDtoOut add(Long userId, ItemDto itemDto) {
-        UserDto user = userService.findById(userId);
-        Item item = ItemMapper.toItem(itemDto);
-        item.setOwner((UserMapper.toUser(user)));
-        return ItemMapper.toItemDtoOut(itemRepository.save(item));
+    public ItemDto create(ItemDto itemDto, long userId) {
+        validateUserId(userId);
+        validateItemDto(itemDto);
+        log.debug("Создание элемента предмета: {}; для пользователя {}", itemDto, userId);
+        Item item = convertToItem(itemDto);
+        Item createdItem = itemRepository.create(item, userId);
+        return convertToItemDto(createdItem);
     }
 
-
     @Override
-    @Transactional
-    public ItemDtoOut update(Long userId, Long itemId, ItemDto itemDto) {
-        UserDto user = userService.findById(userId);
-        Item item = itemRepository.findById(itemId)
-                .orElseThrow(() -> {
-                            return new NotFoundException("Вещи с " + itemId + " не существует");
-                        }
-                );
-        if (!UserMapper.toUser(user).equals(item.getOwner())) {
-            throw new NotFoundException("Пользователь с id = " + userId +
-                    " не является собственником вещи id = " + itemId);
-        }
-        Boolean isAvailable = itemDto.getAvailable();
-        if (isAvailable != null) {
-            item.setAvailable(isAvailable);
-        }
-        String description = itemDto.getDescription();
-        if (description != null && !description.isBlank()) {
-            item.setDescription(description);
-        }
-        String name = itemDto.getName();
-        if (name != null && !name.isBlank()) {
-            item.setName(name);
-        }
-        return ItemMapper.toItemDtoOut(item);
+    public ItemDto update(ItemDto itemDto, long userId) {
+        validateUserId(userId);
+        validateItemId(itemDto.getId());
+        log.debug("Обновление элемента предмета: {}; для пользователя {}", itemDto, userId);
+        Item existingItem = itemRepository.getItemById(itemDto.getId());
+        Item updatedItem = itemRepository.update(convertForUpdate(itemDto, existingItem), userId);
+        return convertToItemDto(updatedItem);
     }
 
-
     @Override
-    @Transactional
-    public ItemDtoOut findItemById(Long userId, Long itemId) {
-        userService.findById(userId);
-        Optional<Item> itemGet = itemRepository.findById(itemId);
-        if (itemGet.isEmpty()) {
-            throw new NotFoundException("У пользователя с id = " + userId + " не " +
-                    "существует вещи с id = " + itemId);
-        }
-        Item item = itemGet.get();
-        ItemDtoOut itemDtoOut = ItemMapper.toItemDtoOut(itemGet.get());
-        itemDtoOut.setComments(getAllItemComments(itemId));
-        if (!item.getOwner().getId().equals(userId)) {
-            return itemDtoOut;
-        }
-        List<Booking> bookings = bookingRepository.findAllByItemAndStatusOrderByStartAsc(item, BookingStatus.APPROVED);
-        List<BookingDtoOut> bookingDTOList = bookings
-                .stream()
-                .map(BookingMapper::toBookingOut)
-                .collect(toList());
-
-        itemDtoOut.setLastBooking(getLastBooking(bookingDTOList, LocalDateTime.now()));
-        itemDtoOut.setNextBooking(getNextBooking(bookingDTOList, LocalDateTime.now()));
-        return itemDtoOut;
+    public ItemDto getItemById(long itemId, long userId) {
+        validateUserId(userId);
+        validateItemId(itemId);
+        log.debug("Получение элемента предмета по ID: {}; для пользователя {}", itemId, userId);
+        Item item = itemRepository.getItemById(itemId);
+        return convertToItemDto(item);
     }
 
-
     @Override
-    @Transactional
-    public List<ItemDtoOut> findAll(Long userId) {
-        UserDto owner = userService.findById(userId);
-        List<Item> itemList = itemRepository.findAllByOwnerId(userId);
-        List<Long> idList = itemList.stream()
-                .map(Item::getId)
+    public Collection<ItemDto> getItemsByUserId(long userId) {
+        validateUserId(userId);
+        log.debug("Получение предметов по ID пользователя: {}", userId);
+        return itemRepository.getItemsByUserId(userId).stream()
+                .map(ItemMapper::toItemDto)
                 .collect(Collectors.toList());
-        Map<Long, List<CommentDtoOut>> comments = commentRepository.findAllByItemIdIn(idList)
-                .stream()
-                .map(CommentMapper::toCommentDtoOut)
-                .collect(groupingBy(CommentDtoOut::getItemId, toList()));
-
-        Map<Long, List<BookingDtoOut>> bookings = bookingRepository.findAllByItemInAndStatusOrderByStartAsc(itemList,
-                        BookingStatus.APPROVED)
-                .stream()
-                .map(BookingMapper::toBookingOut)
-                .collect(groupingBy(BookingDtoOut::getItemId, toList()));
-
-        return itemList
-                .stream()
-                .map(item -> ItemMapper.toItemDtoOut(
-                        item,
-                        getLastBooking(bookings.get(item.getId()), LocalDateTime.now()),
-                        comments.get(item.getId()),
-                        getNextBooking(bookings.get(item.getId()), LocalDateTime.now())
-                ))
-                .collect(toList());
     }
 
-
     @Override
-    @Transactional
-    public List<ItemDtoOut> search(Long userId, String text) {
-        userService.findById(userId);
-        if (text.isBlank()) {
+    public Collection<ItemDto> getItemsBySearch(String text) {
+        if (text == null || text.trim().isEmpty()) {
             return Collections.emptyList();
         }
-        List<Item> itemList = itemRepository.search(text);
-        return itemList.stream()
-                .map(ItemMapper::toItemDtoOut)
-                .collect(toList());
+        log.debug("Поиск предметов по тексту: {}", text);
+        return itemRepository.getItemsBySearch(text.toLowerCase()).stream()
+                .map(ItemMapper::toItemDto)
+                .collect(Collectors.toList());
     }
 
     @Override
-    @Transactional
-    public CommentDtoOut createComment(Long userId, CommentDto commentDto, Long itemId) {
-        User user = UserMapper.toUser(userService.findById(userId));
-        Optional<Item> itemById = itemRepository.findById(itemId);
-
-        if (itemById.isEmpty()) {
-
-            throw new NotFoundException("У пользователя с id = " + userId + " не " +
-                    "существует вещи с id = " + itemId);
-        }
-        Item item = itemById.get();
-
-        List<Booking> userBookings = bookingRepository.findAllByUserBookings(userId, itemId, LocalDateTime.now());
-
-        if (userBookings.isEmpty()) {
-            throw new ValidationException("У пользователя с id   " + userId + " должно быть хотя бы одно бронирование предмета с id " + itemId);
-        }
-
-        return CommentMapper.toCommentDtoOut(commentRepository.save(CommentMapper.toComment(commentDto, item, user)));
+    public ItemDto checkItemOwner(Long itemId, Long ownerId) {
+        return null;
     }
 
-    public List<CommentDtoOut> getAllItemComments(Long itemId) {
-        List<Comment> comments = commentRepository.findAllByItemId(itemId);
-
-        return comments.stream()
-                .map(CommentMapper::toCommentDtoOut)
-                .collect(toList());
+    @Override
+    public CommentDto addCommentToItem(Long userId, Long itemId, CommentDto commentDto) {
+        return null;
     }
 
-    private BookingDtoOut getLastBooking(List<BookingDtoOut> bookings, LocalDateTime time) {
-        if (bookings == null || bookings.isEmpty()) {
-            return null;
+    private void validateUserId(long userId) {
+        if (userId == -1) {
+            throw new IncorrectDataException("Пользователь с header-Id: " + userId + " не существует.");
         }
-
-        return bookings
-                .stream()
-                .filter(bookingDTO -> !bookingDTO.getStart().isAfter(time))
-                .reduce((booking1, booking2) -> booking1.getStart().isAfter(booking2.getStart()) ? booking1 : booking2)
-                .orElse(null);
+        boolean userExists = userService.getAll().stream()
+                .map(UserDto::getId)
+                .anyMatch(id -> id.equals(userId));
+        if (!userExists) {
+            throw new EntityNotFoundException("Пользователь с ID: " + userId + " не найден.");
+        }
     }
 
-    private BookingDtoOut getNextBooking(List<BookingDtoOut> bookings, LocalDateTime time) {
-        if (bookings == null || bookings.isEmpty()) {
-            return null;
+    private void validateItemId(long itemId) {
+        if (itemRepository.getItemById(itemId) == null) {
+            throw new EntityNotFoundException("Элемент предмета с ID: " + itemId + " не найден.");
+        }
+    }
+
+    private void validateItemDto(ItemDto itemDto) {
+        if (itemDto.getAvailable() == null || itemDto.getDescription() == null || itemDto.getName() == null) {
+            throw new EmptyFieldException("Поля в элементе ItemDto содержат null!");
         }
 
-        return bookings
-                .stream()
-                .filter(bookingDTO -> bookingDTO.getStart().isAfter(time))
-                .findFirst()
-                .orElse(null);
+        if (itemDto.getName().trim().isEmpty() || itemDto.getDescription().trim().isEmpty()) {
+            throw new EmptyFieldException("Поля в элементе ItemDto пустые!");
+        }
+    }
+
+    private Item convertToItem(ItemDto itemDto) {
+        return ItemMapper.toItem(itemDto);
+    }
+
+    private Item convertForUpdate(ItemDto itemDto, Item existingItem) {
+        return ItemMapper.toItemUpdate(itemDto, existingItem);
+    }
+
+    private ItemDto convertToItemDto(Item item) {
+        return ItemMapper.toItemDto(item);
     }
 }
+
